--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": "pnpm run lint"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "fmt": "prettier --write **/*.{js,jsx,ts,tsx,css,scss}",
+    "fmt:warn": "prettier --l **/*.{js,jsx,ts,tsx,css,scss}"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -23,12 +28,14 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
