--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "next start",
     "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
     "fmt": "prettier --write **/*.{js,jsx,ts,tsx,css,scss}",
-    "fmt:warn": "prettier --l **/*.{js,jsx,ts,tsx,css,scss}"
+    "fmt:warn": "prettier --l **/*.{js,jsx,ts,tsx,css,scss}",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -34,6 +35,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.2",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
