--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["next/core-web-vitals", "plugin:tailwindcss/recommended"]
+  "extends": ["next/core-web-vitals", "plugin:tailwindcss/recommended"],
+  "plugins": ["prettier", "eslint-plugin-next-on-pages"],
+  "rules": {
+    "prettier/prettier": "error"
+  }
 }
