--- a/.prettierrc
+++ b/.prettierrc
@@ -1,23 +1,6 @@
 {
+  "printWidth": 100,
   "singleQuote": true,
   "jsxSingleQuote": true,
-  "semi": true,
-  "tabWidth": 2,
-  "trailingComma": "es5",
-  "bracketSpacing": true,
-  "importOrder": [
-    "^(react/(.*)$)|^(react$)",
-    "^(next/(.*)$)|^(next$)",
-    "<THIRD_PARTY_MODULES>",
-    "^types$",
-    "^@/config/(.*)$",
-    "^@/lib/(.*)$",
-    "^@/components/(.*)$",
-    "^@/hooks/(.*)$",
-    "^@/styles/(.*)$",
-    "^[./]"
-  ],
-  "importOrderSeparation": false,
-  "importOrderSortSpecifiers": true,
-  "plugins": ["@trivago/prettier-plugin-sort-imports"]
+  "plugins": ["prettier-plugin-organize-imports"]
 }
