--- a/package.json
+++ b/package.json
@@ -26,16 +26,18 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-next-on-pages": "^1.12.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-tailwindcss": "^3.15.2",
     "lint-staged": "^15.2.2",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "prettier-plugin-organize-imports": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
