--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "contentful": "^10.15.0",
+    "highlight.js": "^11.10.0",
     "lucide-react": "^0.376.0",
+    "markdown-it": "^14.1.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -29,6 +31,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.14",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20.16.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
