--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "fmt:warn": "prettier --l **/*.{js,jsx,ts,tsx,css,scss}"
   },
   "dependencies": {
+    "@contentful/live-preview": "^4.5.4",
     "@next/third-parties": "^14.2.5",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "contentful": "^10.15.0",
     "lucide-react": "^0.376.0",
     "markdown-it": "^14.1.0",
     "next": "14.2.3",
