--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/node": "^20.16.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "dayjs": "^1.11.13",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-plugin-next-on-pages": "^1.13.2",
