--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-next-on-pages": "^1.13.2",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
+    "highlight.js": "^11.10.0",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.0.0",
