feat: replace markdown-it to marked

--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "clsx": "^2.1.1",
     "contentful": "^10.15.0",
     "lucide-react": "^0.376.0",
-    "markdown-it": "^14.1.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -32,7 +31,6 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.14",
-    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20.16.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -43,6 +41,8 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "highlight.js": "^11.10.0",
+    "marked": "^14.1.1",
+    "marked-highlight": "^2.1.4",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.0.0",
