--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-CONTENTFUL_SPACE_ID=
-CONTENTFUL_ACCESS_TOKEN=
-CONTENTFUL_PREVIEW_ACCESS_TOKEN=
-CONTENTFUL_PREVIEW_SECRET_TOKEN=
-CONTENTFUL_ENVIRONMENT=
+NEXT_PUBLIC_API_URL=http://localhost:3000
+AUTH_GITHUB_ID=your_github_id_here
+AUTH_GITHUB_SECRET=your_github_secret_here
+AUTH_SECRET="your_auth_secret_here" # Added by `npx auth`. Read more: https://cli.authjs.dev
+DATABASE_URL="file:./dev.db"
