--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.1",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.447.0",
+    "marked": "^15.0.7",
     "next": "^15.2.2",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
