--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
-NEXT_PUBLIC_API_URL=http://localhost:3000
-AUTH_GITHUB_ID=your_github_id_here
-AUTH_GITHUB_SECRET=your_github_secret_here
-AUTH_SECRET="your_auth_secret_here" # Added by `npx auth`. Read more: https://cli.authjs.dev
-DATABASE_URL="file:./dev.db"
+# Secret key for Auth.js. Generate with `npx auth secret`.
+AUTH_SECRET="your_auth_secret"
+
+# PostgreSQL database connection URL
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
+
+# GitHub authentication credentials
+# Obtain these from GitHub OAuth Apps: https://github.com/settings/developers
+AUTH_GITHUB_ID=your_github_id
+AUTH_GITHUB_SECRET=your_github_secret
