--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,10 @@
 {
   "printWidth": 100,
-  "singleQuote": true,
-  "jsxSingleQuote": true,
+  "singleQuote": false,
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": true,
+  "bracketSpacing": true,
+  "endOfLine": "lf",
   "plugins": ["prettier-plugin-organize-imports"]
 }
