--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "lucide-react": "^0.447.0",
     "next": "^15.2.2",
     "next-auth": "5.0.0-beta.25",
+    "next-themes": "^0.4.6",
     "react": "19.0.0-rc.1",
     "react-dom": "19.0.0-rc.1",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
