--- a/package.json
+++ b/package.json
@@ -24,27 +24,46 @@
     "@ai-sdk/google": "^1.2.13",
     "@auth/prisma-adapter": "^2.8.0",
     "@next/third-parties": "^15.2.4",
+    "@octokit/graphql": "^9.0.1",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@rehype-pretty/transformers": "^0.13.2",
+    "@shikijs/transformers": "^3.6.0",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "@tailwindcss/typography": "^0.5.16",
     "ai": "^4.3.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.447.0",
+    "meta-fetcher": "^3.1.1",
     "next": "^15.2.2",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "react": "19.0.0-rc.1",
     "react-dom": "19.0.0-rc.1",
     "react-icons": "^5.5.0",
+    "reading-time": "^1.5.0",
+    "rehype": "^13.0.2",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.1",
+    "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
     "rss-parser": "^3.13.0",
+    "shiki": "^3.6.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "unified": "^11.0.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
