chore(config): add blog related env variables

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,9 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=publ
 # Obtain these from GitHub OAuth Apps: https://github.com/settings/developers
 AUTH_GITHUB_ID=your_github_id
 AUTH_GITHUB_SECRET=your_github_secret
+
+GOOGLE_GENERATIVE_AI_API_KEY=your_gemini_key
+GITHUB_TOKEN=your_gh_token
+
+# Generate with openssl rand -hex 32
+GITHUB_WEBHOOK_SECRET=your_gh_webhook_secret
