--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "feed": "^5.1.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.447.0",
     "meta-fetcher": "^3.1.1",
