--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.447.0",
     "meta-fetcher": "^3.1.1",
-    "next": "^15.2.2",
+    "next": "15.2.6",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "react": "19.0.0-rc.1",
