--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@ai-sdk/google": "^1.2.13",
     "@auth/prisma-adapter": "^2.8.0",
     "@next/third-parties": "^15.2.4",
     "@octokit/graphql": "^9.0.1",
+    "@openrouter/ai-sdk-provider": "^1.5.3",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -35,7 +35,7 @@
     "@shikijs/transformers": "^3.6.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tailwindcss/typography": "^0.5.16",
-    "ai": "^4.3.9",
+    "ai": "^5.0.112",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -66,7 +66,7 @@
     "tailwindcss-animate": "^1.0.7",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
-    "zod": "^3.24.2"
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/mdast": "^4.0.4",
