--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@iconify/react": "^6.0.2",
     "@types/mdast": "^4.0.4",
     "@types/node": "^20.17.24",
     "@types/react": "^18.3.18",
