--- a/package.json
+++ b/package.json
@@ -5,24 +5,24 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "check": "next lint && tsc --noEmit",
+    "check": "eslint . && tsc --noEmit",
     "db:generate": "dotenv -e .env.local -- prisma migrate dev",
     "db:migrate": "dotenv -e .env.local -- prisma migrate deploy",
     "db:push": "dotenv -e .env.local -- prisma db push",
     "db:studio": "dotenv -e .env.local -- prisma studio",
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbopack",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "postinstall": "prisma generate",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "preview": "next build && next start",
     "start": "next start",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
-    "@next/third-parties": "^15.2.4",
+    "@next/third-parties": "16.1.1",
     "@octokit/graphql": "^9.0.1",
     "@openrouter/ai-sdk-provider": "^1.5.3",
     "@prisma/client": "^5.22.0",
@@ -33,7 +33,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@rehype-pretty/transformers": "^0.13.2",
     "@shikijs/transformers": "^3.6.0",
-    "@t3-oss/env-nextjs": "^0.12.0",
+    "@t3-oss/env-nextjs": "^0.13.0",
     "@tailwindcss/typography": "^0.5.16",
     "ai": "^5.0.112",
     "class-variance-authority": "^0.7.1",
@@ -43,11 +43,11 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.447.0",
     "meta-fetcher": "^3.1.1",
-    "next": "15.2.6",
-    "next-auth": "5.0.0-beta.25",
+    "next": "16.1.1",
+    "next-auth": "5.0.0-beta.30",
     "next-themes": "^0.4.6",
-    "react": "19.0.0-rc.1",
-    "react-dom": "19.0.0-rc.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
     "reading-time": "^1.5.0",
     "rehype": "^13.0.2",
@@ -66,17 +66,17 @@
     "tailwindcss-animate": "^1.0.7",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
-    "zod": "^4.1.13"
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@iconify/react": "^6.0.2",
     "@types/mdast": "^4.0.4",
     "@types/node": "^20.17.24",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "dotenv-cli": "^7.4.4",
     "eslint": "^9.22.0",
-    "eslint-config-next": "15.1.0",
+    "eslint-config-next": "15.5.9",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-tailwindcss": "^3.18.0",
