--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-authjs-template",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -21,7 +21,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.8.0",
+
     "@next/third-parties": "16.1.1",
     "@octokit/graphql": "^9.0.1",
     "@openrouter/ai-sdk-provider": "^1.5.3",
@@ -44,7 +44,7 @@
     "lucide-react": "^0.447.0",
     "meta-fetcher": "^3.1.1",
     "next": "16.1.1",
-    "next-auth": "5.0.0-beta.30",
+
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
