--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-
     "@next/third-parties": "16.1.1",
     "@octokit/graphql": "^9.0.1",
     "@openrouter/ai-sdk-provider": "^1.5.3",
@@ -32,6 +31,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@rehype-pretty/transformers": "^0.13.2",
+    "@ridemountainpig/svgl-react": "^1.0.14",
     "@shikijs/transformers": "^3.6.0",
     "@t3-oss/env-nextjs": "^0.13.0",
     "@tailwindcss/typography": "^0.5.16",
@@ -44,7 +44,6 @@
     "lucide-react": "^0.447.0",
     "meta-fetcher": "^3.1.1",
     "next": "16.1.1",
-
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -69,7 +68,6 @@
     "zod": "^4.2.1"
   },
   "devDependencies": {
-    "@iconify/react": "^6.0.2",
     "@types/mdast": "^4.0.4",
     "@types/node": "^20.17.24",
     "@types/react": "19.2.7",
